# COMP4985_Game_Prototype_v0

./: CMakeLists.txt  main.c
include/Boosts/: Boosts.c  Boosts.h
include/Maps/: Maps.c  Maps.h
include/Monsters/: Monsters.c  Monsters.h
include/Monsters_v2/: Monsters_v2.c  Monsters_v2.h
include/Players/: Bullets.c  Bullets.h  Players.c  Players.h
